@@ -858,6 +858,18 @@
                   </div>
                 </div>
               </div>
+
+              <div class="card-wrapper">
+                <div class="card text-center">
+                  <img class="card-img-top" src="/img/reviews/mrbeast.png" alt="mrbeast" />
+                  <div class="card-body">
+                    <h3>Mr.Beast</h3>
+                    <p class="card-text">
+                      10/10 always gets blocked but every one just makes a copy it!
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
