@@ -17,6 +17,12 @@ NOTE: Make sure you refresh the page! Sometimes you will not get the lastest upd
 ^ Means something was upgraded or changed
 - Means something was removed
 ------------------------------------------------------------
+Nov, 12
+^ Added more reviews
+------------------------------------------------------------
+Nov, 10
+^ Added more reviews
+------------------------------------------------------------
 Nov, 8
 Submit your sounds for the soundboard here: https://forms.gle/1KHtjREBvbf1VCGG9
 ^ Added more sounds to the soundboard
